# finance-tracker

./: Dockerfile  Makefile  README.md  create_graphs.py  db.json  graph_helpers.py  main.py  notion_api.py  output.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: update_charts.yml
src/finance_tracker/: app.py  gradio-app.py
src/finance_tracker/connectors/: notion_api.py  notion_to_pandas.py  notion_utils.py
src/finance_tracker/graphs/: bus_expense_vs_revenue_totals.py  bus_expense_vs_revenue_waterfall.py  bus_transfer_to_savings_totals.py  create_graphs.py  nonbus_subcategory_totals.py  revenue_vs_expense_totals.py  subcategory.py  utils.py
src/finance_tracker/utils/: utils.py
